2003-12-10  Mark D. Baushke  <mdb@cvshome.org>

	* cvsnt.mak (CLEAN, CPP_SBRS): Add ftello, fseeko, exithandle and
	getndelim2.
	(ftello.c, fseeko.c, exithandle.c, getndelim2): Add new source
	file definitions.
	(Patch from Rob Clevenger <rob@robsite.org>.)
	
2003-12-09  Derek Price  <derek@ximbiot.com>

	* NEWS: Add section for 1.12.4.

2003-12-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Update for release 1.12.4.1.
	* configure: Regenerated.

2003-12-09  Derek Price  <derek@ximbiot.com>

	* NEWS: Note new promotable read locks.
	* configure.in (--enable-lock-compatibility): New option.
	* configure, config.h.in: Regenerated.

2003-12-09  Derek Price  <derek@ximbiot.com>

	* configure.in: Reorder enables slightly and improve commenting.
	* configure: Regenerated.

2003-12-09  Mark D. Baushke  <mdb@cvshome.org>

	* configure.in (fseeko, ftello): Add to AC_REPLACE_FUNCS list.
	* configure, config.h.in: Regenerated.

2003-12-08  Mark D. Baushke  <mdb@cvshome.org>

	* configure.in (AC_SYS_LARGEFILE). Add.
	* configure, config.h.in: Regenerated.
	* NEWS: Document.

2003-12-07  Mark D. Baushke  <mdb@cvshome.org>

	* configure.in (AC_SYS_LARGEFILE): Remove. More work is needed
	before AC_SYS_LARGEFILE will work on all platforms.
	* configure, config.h.in: Regenerated.
	* NEWS: Remove last note.

	* configure.in (AC_SYS_LARGEFILE): Add. The history file on
	Solaris boxes can grow beyond 2GB.
	* configure, config.h.in: Regenerated.
	* NEWS: Note addition of --disable-largefiles option.

2003-12-05  Derek Price  <derek@ximbiot.com>

	* configure.in: Update to require Automake 1.7.9.

2003-12-05  Derek Price  <derek@ximbiot.com>

	* NEWS: Add since 1.12.3 section.
	* configure.in: Update for dev version 1.12.3.1.
	* configure: Regenerated.

2003-12-04  Derek Price  <derek@ximbiot.com>

	* configure.in: Update for release 1.12.3.
	* configure: Regenerated.

2003-12-03  Derek Price  <derek@ximbiot.com>
