@@ -18,6 +18,7 @@
 #include <stdio.h>
 #include <sys/types.h>
 
+#if !defined(HAVE_FSEEKO) && !defined(ftello)
 off_t
 ftello (FILE *stream)
 {
@@ -26,3 +27,4 @@ ftello (FILE *stream)
 
     return (off_t) pos;
 }
+#endif /* !defined(HAVE_FSEEKO) && !defined(ftello) */
