@@ -465,9 +465,17 @@ extern int errno;
 #define CVS_FNMATCH fnmatch
 #endif
 
-#ifndef HAVE_FTELLO
+#ifndef HAVE_FSEEKO
+
+#ifndef ftello
 off_t ftello (FILE *);
 #endif
+
+#ifndef fseeko
+int fseeko (FILE *, off_t, int);
+#endif
+
+#endif /* HAVE_FSEEKO */
 
 #if defined (__CYGWIN32__) || defined (WIN32)
 /*
